--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;800&display=swap");
+
 .page-headers {
   color: var(--WhiteOpacity90_Neutrals);
 
@@ -19,4 +21,11 @@
   & a {
     color: var(--Purple1_Secondary);
   }
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
 }
