--- a/src/components/styles/landing.scss
+++ b/src/components/styles/landing.scss
@@ -62,7 +62,7 @@
 
   .testimonial-inner-container {
     width: 100%;
-    max-width: 300px;
+    max-width: 353px;
     margin: 0.5rem;
     background: var(--WhiteOpacity90_Neutrals);
     color: var(--NoonDark2_Neutrals);
@@ -93,6 +93,7 @@
   .testimonial-wrapper {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     // grid-template-columns: var(--reponsive-grid-1col);
     // grid-column-gap: 2em;
 
@@ -130,7 +131,7 @@
 .downloads-container {
   background: var(--Purple1_Secondary);
   color: var(--WhiteOpacity90_Neutrals);
-  height: 100%;
+  // height: 100%;
   padding: 10% 0 10% 0;
 
   display: flex;
@@ -139,7 +140,17 @@
 
   .growth-number-container {
     display: flex;
+    flex-wrap: wrap;
+    width: 100%;
     align-items: var(--center);
+    justify-content: center;
+  }
+
+  p {
+    text-align: center;
+  }
+  .download-links {
+    text-align: center;
   }
 }
 
@@ -148,13 +159,20 @@
   color: var(--NoonDark2_Neutrals);
 
   padding: 20px 10px;
-  width: 300px;
-  margin: 0 10px;
+  max-width: 300px;
+  width: 100%;
+  // margin: 0 10px;
+  margin: 0.5rem;
 
   text-align: var(--center);
   border-radius: 15px;
 
   & h2 {
     color: var(--Purple1_Secondary);
+  }
+
+  @media (max-width: 720px) {
+    margin: 0.3rem 0.9rem;
+    max-width: 400px;
   }
 }
