--- a/src/components/styles/footer.scss
+++ b/src/components/styles/footer.scss
@@ -5,6 +5,7 @@
   position: absolute;
   left: 0;
   right: 0;
+  padding: 0 15px;
 }
 
 .footer-component-container {
@@ -66,5 +67,15 @@
     justify-content: var(--space-between);
     align-items: center;
     width: 150px;
+  }
+
+  @media (max-width: 1028px) {
+    width: 100%;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    p {
+      text-align: center;
+    }
   }
 }
