--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -1,5 +1,54 @@
 @import "../../styles/theme";
 
+header {
+  background: rgba(3, 3, 6, 0.9);
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+  padding: 15px;
+
+  .header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    max-width: 1115px;
+    margin: 0 auto;
+  }
+
+  .nav {
+    width: 100%;
+    padding: 1rem;
+    display: none;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    * {
+      box-sizing: border-box;
+    }
+  }
+
+  .menu {
+    background: none;
+    border: none;
+    color: white;
+  }
+
+  .show {
+    display: block;
+    flex-grow: 1;
+  }
+
+  @media (min-width: 768px) {
+    .nav {
+      display: inline-flex;
+      flex-direction: row;
+    }
+    .menu {
+      display: none;
+    }
+  }
+}
+
 .button-container {
   & a {
     text-decoration: none;
