--- a/src/components/styles/landing.scss
+++ b/src/components/styles/landing.scss
@@ -13,6 +13,10 @@
   .text-wrapper {
     display: var(--flex);
     flex-direction: var(--column);
+
+    @media (max-width: 768px) {
+      margin-top: 8%;
+    }
   }
 
   .content-wrapper {
