--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -9,15 +9,18 @@ header {
 
   .header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     max-width: 1115px;
     margin: 0 auto;
+
+    @media (max-width: 768px) {
+      flex-direction: column;
+    }
   }
 
   .nav {
     width: 100%;
-    padding: 1rem;
     display: none;
     flex-direction: column;
     justify-content: flex-end;
@@ -25,6 +28,16 @@ header {
     * {
       box-sizing: border-box;
     }
+
+    a {
+      margin-right: 2rem;
+    }
+  }
+
+  .logoNmenu {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
   }
 
   .menu {
