fix: privacy page

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,3 +1,5 @@
+@import "./mixins.scss";
+
 .page-headers {
   color: var(--WhiteOpacity90_Neutrals);
 
@@ -13,8 +15,9 @@
 
 .pages-body-container {
   width: 100%;
-  max-width: 960px;
-  margin: 5em auto;
+  max-width: 760px;
+  margin: 0 auto;
+  padding: 4em 15px;
 
   & a {
     color: var(--Purple1_Secondary);
@@ -23,4 +26,8 @@
 
 * {
   box-sizing: border-box;
+}
+
+ul li {
+  list-style: none;
 }
