--- a/src/styles/ambassador.scss
+++ b/src/styles/ambassador.scss
@@ -1,13 +1,17 @@
+@import "./global.scss";
+@import "./mixins.scss";
+
 #ambassador-page {
-  background: var(--NoonDark1_Neutrals);
-  color: var(--Gray1_Grays);
+  // background: var(--NoonDark1_Neutrals);
 }
 
 .amb-header-container {
   height: 100%;
+  color: var(--Gray1_Grays);
 
   max-width: 1115px;
   padding: 10% 0 0 0;
+  padding: 10% 15px;
   display: var(--grid);
   grid-template-columns: var(--reponsive-grid-2col);
   align-items: flex-start;
@@ -19,13 +23,21 @@
       font-size: 48px;
       font-weight: 800;
       position: relative;
-      width: 758px;
+      width: 752px;
       color: var(--Green_Accent);
 
       padding: 8% 0 0 0;
 
       & span {
         color: #fff;
+      }
+    }
+
+    @include for-phone-only {
+      .amb-h1 {
+        font-size: 24px;
+        word-wrap: normal;
+        width: 100%;
       }
     }
   }
@@ -41,7 +53,7 @@
 }
 
 .button-purple-stroke {
-  padding: 15px 18px;
+  padding: 8px 12px;
   border: 1px solid var(--Purple1_Secondary);
   border-radius: 10px;
 
@@ -49,10 +61,11 @@
   color: var(--Purple1_Secondary);
   outline: none;
   cursor: pointer;
+  margin-bottom: 1em;
 }
 
 .button-green-fill {
-  padding: 15px 18px;
+  padding: 8px 12px;
   border: none;
   border-radius: 10px;
 
@@ -61,136 +74,148 @@
   outline: none;
   cursor: pointer;
   margin: 0 15px;
+  margin-bottom: 1em;
 }
 
-.section1-container {
-  background: linear-gradient(
-      0deg,
-      rgba(16, 17, 23, 0.8),
-      rgba(16, 17, 23, 0.8)
-    ),
-    url("../images/teens.png") var(--no-repeat) var(--center-X-Y) / var(--cover);
-  height: 100%;
-
-  display: var(--flex);
-  align-items: var(--center);
-  flex-direction: var(--column);
-
-  margin: 10% 0 0 0;
-  padding: 5% 0 0 0;
-
-  .sec1-content-wrapper {
-    width: 600px;
+@include for-phone-only {
+  .button-green-fill,
+  .button-purple-stroke {
+    padding: 0.5rem 1rem;
+    font-size: 14px;
+  }
+  .buttons {
     display: flex;
-    flex-direction: var(--column);
-    align-items: var(--center);
-  }
-
-  .sec1-text-wrapper {
-    width: 100%;
-
-    background: rgba(251, 215, 255, 0.1);
-    color: var(--WhiteOpacity90_Neutrals);
-    border-radius: 10px;
-
-    margin: 40px 0px;
-    padding: 25px;
-  }
-
-  .sec1-h1 {
-    color: #fff;
-    font-size: 36px;
-
-    & span {
-      color: var(--Purple1_Secondary);
-      display: inline-block;
-      padding: 0 12px;
-    }
-  }
-
-  .feature-box {
-    height: 340px;
-    max-width: 100%;
-    padding: 10% 0 0 0;
-
-    & img {
-      width: 100%;
-      height: 100%;
-    }
   }
 }
 
-.section2-container {
-  background: var(--BgColor);
-  color: var(--NoonDark2_Neutrals);
-  padding: 5% 0 10% 0;
-}
+// .section1-container {
+//   background: linear-gradient(
+//       0deg,
+//       rgba(16, 17, 23, 0.8),
+//       rgba(16, 17, 23, 0.8)
+//     ),
+//     url("../images/teens.png") var(--no-repeat) var(--center-X-Y) / var(--cover);
+//   height: 100%;
 
-.amb-colored-title {
-  color: var(--Purple1_Secondary);
+//   display: var(--flex);
+//   align-items: var(--center);
+//   flex-direction: var(--column);
 
-  & h2:nth-child(1) {
-    color: var(--NoonDark2_Neutrals);
-  }
-}
+//   margin: 10% 0 0 0;
+//   padding: 5% 0 0 0;
 
-.section3-container {
-  background-color: var(--NoonDark2_Neutrals);
-  height: 100%;
+//   .sec1-content-wrapper {
+//     width: 600px;
+//     display: flex;
+//     flex-direction: var(--column);
+//     align-items: var(--center);
+//   }
 
-  display: var(--flex);
-  align-items: var(--center);
-  flex-direction: var(--column);
+//   .sec1-text-wrapper {
+//     width: 100%;
 
-  padding: 5% 0 5% 0;
-  //   margin: 10% 0 0 0;
+//     background: rgba(251, 215, 255, 0.1);
+//     color: var(--WhiteOpacity90_Neutrals);
+//     border-radius: 10px;
 
-  .join-wB-container {
-    max-width: 100%;
-    padding: 5% 0 0 0;
-    display: var(--grid);
-    grid-template-columns: var(--reponsive-grid-2col);
-    align-items: var(--center);
+//     margin: 40px 0px;
+//     padding: 25px;
+//   }
 
-    .join-list-items {
-      list-style: none;
-      width: 450px;
+//   .sec1-h1 {
+//     color: #fff;
+//     font-size: 36px;
 
-      .list-title {
-        display: flex;
-        align-items: center;
+//     & span {
+//       color: var(--Purple1_Secondary);
+//       display: inline-block;
+//       padding: 0 12px;
+//     }
+//   }
 
-        & svg {
-          margin: 0 10px 0 0;
-        }
-      }
-    }
-  }
-}
+//   .feature-box {
+//     height: 340px;
+//     max-width: 100%;
+//     padding: 10% 0 0 0;
 
-.list1 {
-  color: var(--Green_Accent);
-}
-.list2 {
-  color: var(--Purple1_Secondary);
-}
-.list3 {
-  color: var(--Peach1_Primary);
-}
+//     & img {
+//       width: 100%;
+//       height: 100%;
+//     }
+//   }
+// }
 
-.section4-container {
-  max-width: 960px;
-  height: 100%;
+// .section2-container {
+//   background: var(--BgColor);
+//   color: var(--NoonDark2_Neutrals);
+//   padding: 5% 0 10% 0;
+// }
 
-  padding: 5% 0 5% 0;
-  margin: auto;
+// .amb-colored-title {
+//   color: var(--Purple1_Secondary);
 
-  & a {
-    color: var(--Peach1_Primary);
-    text-decoration: none;
-  }
+//   & h2:nth-child(1) {
+//     color: var(--NoonDark2_Neutrals);
+//   }
+// }
 
-  & h3 {
-    text-align: center;
-  }
-}
+// .section3-container {
+//   background-color: var(--NoonDark2_Neutrals);
+//   height: 100%;
+
+//   display: var(--flex);
+//   align-items: var(--center);
+//   flex-direction: var(--column);
+
+//   padding: 5% 0 5% 0;
+//   //   margin: 10% 0 0 0;
+
+//   .join-wB-container {
+//     max-width: 100%;
+//     padding: 5% 0 0 0;
+//     display: var(--grid);
+//     grid-template-columns: var(--reponsive-grid-2col);
+//     align-items: var(--center);
+
+//     .join-list-items {
+//       list-style: none;
+//       width: 450px;
+
+//       .list-title {
+//         display: flex;
+//         align-items: center;
+
+//         & svg {
+//           margin: 0 10px 0 0;
+//         }
+//       }
+//     }
+//   }
+// }
+
+// .list1 {
+//   color: var(--Green_Accent);
+// }
+// .list2 {
+//   color: var(--Purple1_Secondary);
+// }
+// .list3 {
+//   color: var(--Peach1_Primary);
+// }
+
+// .section4-container {
+//   max-width: 960px;
+//   height: 100%;
+
+//   padding: 5% 0 5% 0;
+//   margin: auto;
+
+//   & a {
+//     color: var(--Peach1_Primary);
+//     text-decoration: none;
+//   }
+
+//   & h3 {
+//     text-align: center;
+//   }
+// }
