--- a/src/components/styles/aside.scss
+++ b/src/components/styles/aside.scss
@@ -1,3 +1,5 @@
+@import "../../styles/mixins.scss";
+
 .left-aside-container {
   width: 100%;
   max-width: 1115px;
@@ -18,6 +20,14 @@
       width: 400px;
     }
   }
+  // @include for-tablet-portait-only {
+  //   grid-template-columns: 1fr;
+  //   justify-content: center;
+  // }
+  // @include for-phone-only {
+  //   justify-content: center;
+  //   grid-template-columns: 1fr;
+  // }
 }
 
 .right-aside-container {
@@ -42,6 +52,14 @@
       width: 400px;
     }
   }
+  // @include for-tablet-portait-only {
+  //   grid-template-columns: 1fr;
+  //   // justify-content: center;
+  // }
+  // @include for-phone-only {
+  //   // justify-content: center;
+  //   grid-template-columns: 1fr;
+  // }
 }
 
 .download-buttons {
