--- a/src/components/styles/collapse.scss
+++ b/src/components/styles/collapse.scss
@@ -1,8 +1,8 @@
 .collapsible-card {
-  margin: 25px 0px;
+  margin: 25px auto;
 
   .drop--down__container {
-    display: flex;
+    display: block;
     align-items: center;
     height: auto;
     justify-content: center;
@@ -11,6 +11,7 @@
     padding: 10px 15px;
     margin-bottom: 1em;
     cursor: pointer;
+    width: 100%;
   }
 
   .title-and-toggle {
