--- a/src/styles/faq.scss
+++ b/src/styles/faq.scss
@@ -1,24 +1,29 @@
-// .faq-header {
-//   background: var(--Bg-overlay);
-//   height: 40vh;
+.faq-header {
+  background: var(--Bg-overlay);
+  height: 40vh;
 
-//   //   max-width: 960px;
-//   padding: 10% 0 0 0;
-//   display: var(--flex);
-//   flex-direction: var(--column);
-//   align-items: center;
-//   margin: auto;
+  //   max-width: 960px;
+  padding: 10% 0 0 0;
+  display: var(--flex);
+  flex-direction: var(--column);
+  align-items: center;
+  margin: auto;
 
-//   color: var(--WhiteOpacity90_Neutrals);
-// }
+  color: var(--WhiteOpacity90_Neutrals);
+}
 
-// .faq-body-container {
-//   width: 100%;
-//   max-width: 960px;
-//   margin: 5em auto;
-// }
+.faq-body-container {
+  width: 100%;
+  max-width: 960px;
+  margin: 5em auto;
+}
 
 .faq_image {
   background: var(--Bg-overlay),
     url("../images/faq_image.jpg") var(--no-repeat) top / var(--cover);
+  div {
+    width: max-content;
+    margin: auto;
+    text-align: center;
+  }
 }
