--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -74,6 +74,8 @@ header {
   border-radius: 10px;
   cursor: pointer;
   list-style: none;
+  text-align: center;
+  outline: var(--Purple1_Secondary);
 
   padding: 10px 15px;
 
