--- a/src/components/styles/landing.scss
+++ b/src/components/styles/landing.scss
@@ -62,6 +62,18 @@
   padding: 0 15px;
   background: var(--Purple1_Secondary);
   color: var(--WhiteOpacity90_Neutrals);
+
+  @include for-phone-only {
+    position: relative;
+    .right-aside-container .wrap {
+      background: var(--Purple1_Secondary);
+      position: absolute;
+      bottom: 5px;
+      left: 0;
+      right: 0;
+      padding: 15px;
+    }
+  }
 }
 .landing-color3 {
   padding: 0 15px;
