--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -1,4 +1,5 @@
 @import "../../styles/theme";
+@import "../../styles/mixins";
 
 header {
   background: rgba(3, 3, 6, 0.9);
@@ -31,6 +32,11 @@ header {
 
     a {
       margin-right: 2rem;
+    }
+    @include for-phone-only {
+      a {
+        margin-right: 0rem;
+      }
     }
   }
 
