--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -49,8 +49,7 @@ header {
   .menu {
     background: none;
     border: none;
-    color: white;
-    outline: var(--Purple1_Secondary);
+    color: var(--Purple1_Secondary);
   }
 
   .show {
