--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -15,7 +15,7 @@ header {
     max-width: 1115px;
     margin: 0 auto;
 
-    @media (max-width: 768px) {
+    @media (max-width: 770px) {
       flex-direction: column;
     }
   }
@@ -30,9 +30,6 @@ header {
       box-sizing: border-box;
     }
 
-    a {
-      margin-right: 2rem;
-    }
     @include for-phone-only {
       a {
         margin-right: 0rem;
@@ -49,7 +46,8 @@ header {
   .menu {
     background: none;
     border: none;
-    color: var(--Purple1_Secondary);
+    color: white;
+    outline-color: var(--Purple1_Secondary);
   }
 
   .show {
@@ -57,7 +55,7 @@ header {
     flex-grow: 1;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: 770px) {
     .nav {
       display: inline-flex;
       flex-direction: row;
@@ -69,6 +67,8 @@ header {
 }
 
 .button-container {
+  margin: 0;
+  margin-left: 1rem;
   & a {
     text-decoration: none;
   }
